# juditha

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build-docker.yml  python.yml
contrib/benchmark/: run.py  vsbericht_2024.txt
docs/: benchmark.md  cli-reference.md  index.md  quickstart.md
docs/extras/: extract.md  percolate.md
docs/load-data/: entities.md  names.md
docs/reference/: settings.md
docs/usage/: cli.md  python.md
juditha/: __init__.py  aggregator.py  cli.py  extraction.py  io.py  model.py  normalizer.py  percolator.py  predict.py  settings.py  store.py  validate.py
tests/: conftest.py  test_aggregation.py  test_extraction.py  test_juditha.py  test_normalizer.py  test_percolate.py  test_predict.py  test_validator.py
