[project]
name = "juditha"
version = "4.4.0"
description = "A super-fast canonical name lookup service"
authors = [{ name = "Simon Wörpel", email = "simon.woerpel@pm.me" }]
license = "AGPLv3+"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "anystore (>=1.2.4,<2.0.0)",
    "followthemoney (>=4.10.0,<5.0.0)",
    "ftmq[level] (>=4.8.2,<5.0.0)",
    "rigour (>=2.1.2,<3.0.0)",
    "rapidfuzz (>=3.9.0,<4.0.0)",
    "jellyfish (>=1.2.1,<2.0.0)",
    "ahocorasick-rs (>=1.0.3,<2.0.0)",
    "tantivy (>=0.25.1,<0.26.0)",
]

[project.scripts]
juditha = "juditha.cli:cli"

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
isort = "^8.0.1"
flake8 = "^7.3.0"
pre-commit = "^4.2.0"
bump2version = "^1.0.1"
pytest = "^9.0.3"
pytest-coverage = "^0.0"
pytest-env = "^1.0.1"
mypy = "^2.3.0"
zensical = "^0.0.50"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
DEBUG = 1
